|
Quick Lists
|
|
Bug ID:
|
6812721
|
|
Votes
|
0
|
|
Synopsis
|
Block's frequency should not be NaN
|
|
Category
|
hotspot:compiler2
|
|
Reported Against
|
|
|
Release Fixed
|
hs15(b03),
hs14(b12) (Bug ID:2173805)
, 6u14(b03) (Bug ID:2174075)
, 7(b51) (Bug ID:2174468)
|
|
State
|
10-Fix Delivered,
bug
|
|
Priority:
|
3-Medium
|
|
Related Bugs
|
6784930
|
|
Submit Date
|
04-MAR-2009
|
|
Description
|
Calculated block's frequency could be NaN which can cause all kind of problems in Register_Allocate and PhaseBlockLayout phases.
Specifically we hit SEGV with HS14 VM on Solaris 8 in qsort() because edge_order() method returns incorrect value
for a block with NaN frequency.
Posted Date : 2009-03-04 02:06:07.0
|
|
Work Around
|
N/A
|
|
Evaluation
|
See description.
Posted Date : 2009-03-04 02:59:40.0
http://hg.openjdk.java.net/jdk7/hotspot-comp/hotspot/rev/19f25e603e7b
Posted Date : 2009-03-04 04:57:17.0
|
|
Comments
|
PLEASE NOTE: JDK6 is formerly known as Project Mustang
|
|
|
 |