6812721: Block's frequency should not be NaN

Set MIN_BLOCK_FREQUENCY block's frequency when calculated block's frequency is NaN

Reviewed-by: never